--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@unfold/babel-preset": "^1.0.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "firebase": "^3.6.4",
     "graphql": "^0.8.2",
     "graphql-server-express": "^0.4.3",
     "graphql-tools": "^0.8.4",
